--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -8,7 +8,7 @@
     border-radius: $radius $radius 0em 0em;
 
     width: 100%;
-    height: 40%;
+    height: 220px;
 }
 
 @media screen and (min-width: 768px) {
